fixes z-index problems in editor

--- a/views/shared/css/neatline-editor.css
+++ b/views/shared/css/neatline-editor.css
@@ -847,7 +847,7 @@ table#header-row {
     border-left: 1px solid #745982;
     border-right: 1px solid #745982;
     border-bottom: 1px solid #745982;
-    z-index: 1000;
+    z-index: 400;
 }
 
 .dropdown-content button {
